bug fixes - panel choice auto-complete, role remove button, member leave log, setup color option, modreport time, rolespanel create